# clip-to-mpv

./: .gitignore  Cargo.toml  README.md  build-release.bat  install.bat
src/: main.rs
