[package]
name = "clip-to-mpv"
version = "0.7.2"
edition = "2021"
description = "A simple Rust CLI app to play URLs stored in the clipboard with mpv."
license = "MIT"
repository = "https://github.com/nalabrie/clip-to-mpv"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[dependencies]
arboard = "3.4.0"
ctrlc = "3.4.4"
url = "2.5.2"
which = "6.0.2"
